Bug 158338 - Opening file with image when JAWS is running causes endless loop
Summary: Opening file with image when JAWS is running causes endless loop
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2023-11-23 15:39 UTC by Gabor Kelemen (Collabora)
Modified: 2023-11-24 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (33.21 KB, application/vnd.oasis.opendocument.text)
2023-11-23 15:39 UTC, Gabor Kelemen (Collabora)
Details
The example file in Writer master, with JAWS running (117.19 KB, image/png)
2023-11-23 15:39 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-11-23 15:39:00 UTC
Created attachment 190997 [details]
Example file from Writer

Attached simple file contains some text and an image.

If JAWS screen reader is running, opening this file causes an endless loop.

1. Download and install JAWS from
https://software.vfo.digital/JAWS/2024/2024.2310.70.400/29169BA7-CF61-4F21-9EF0-2EF1B1DE4ED5/J2024.2310.70.400-Offline-x64.exe
2. Start JAWS, then LO master
3. Open attached file
-> endless loop

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9602f8a9318dd4d3409856e2ae06abe96e72b51b
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 7.5 with:

https://git.libreoffice.org/core/+/1c1647e6ee252fe68d7406d01043e88f1721590f

author	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Aug 21 19:54:16 2022 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Aug 21 22:22:31 2022 +0200

tdf#112865 assigning to mpDrawObj here is unnecessary
Comment 1 Gabor Kelemen (Collabora) 2023-11-23 15:39:37 UTC
Created attachment 190998 [details]
The example file in Writer master, with JAWS running
Comment 2 Gabor Kelemen (Collabora) 2023-11-23 15:40:01 UTC
Adding CC to: Noel Grandin
Comment 3 Commit Notification 2023-11-24 06:47:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1e51005a2413457a9030c565d627e39670785b56

tdf#158338 Opening file with image when JAWS is running causes endless loop

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-11-24 08:45:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/3e7c55e34ab55e13d6eda54f947eb2e4bb2c22b8

tdf#158338 Opening file with image when JAWS is running causes endless loop

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.