tdf#158338 Opening file with image when JAWS is running causes endless loop

Revert "tdf#112865 assigning to mpDrawObj here is unnecessary"

This reverts commit 1c1647e6ee252fe68d7406d01043e88f1721590f.

Change-Id: I056123a90850989436dadf2d4504230550b9ae2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159768
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 1e51005a2413457a9030c565d627e39670785b56)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159892
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>